--- a/resources/css/scss/modules/_popup.scss
+++ b/resources/css/scss/modules/_popup.scss
@@ -104,6 +104,7 @@
 
         }
         .right-group {
+            margin-left: 10px;
             background: $gray-f7;
             border: 1px solid $gray-e;
         }
