--- a/resources/css/scss/modules/_button.scss
+++ b/resources/css/scss/modules/_button.scss
@@ -54,6 +54,11 @@
         > * + * {
             margin-left: 4px;
         }
+        &.md {
+            > * + * {
+                margin-left: 8px;
+            } 
+        }
     }
     &:disabled,
     &:disabled:hover,
@@ -177,6 +182,15 @@
     background: $layer-blue;
     border: 1px solid $layer-blue;
     color: $white;
+    &.md {
+        @include bp-font-size-md;
+        height: 40px;
+        padding: 0 30px;
+        .k-icon {
+            width: 24px;
+            height: 24px;
+        }
+    }
     &:hover, &:focus {
         background-color: $layer-blue-hover;
         border: 1px solid $layer-blue;
