템플릿 수정

--- a/resources/css/scss/modules/_button_b.scss
+++ b/resources/css/scss/modules/_button_b.scss
@@ -1,246 +1,10 @@
-// /*
-//  * ------------------------------
-//  * 버튼
-//  * ------------------------------
-//  */
-//  .h-btn , .k-button { //아이콘만 있는경우
-//     &.hidden {
-//         @include hide-text;
-//         min-width: 0 !important;
-//         padding: 0 !important;
-//         background-color: transparent !important;
-//         border: 0 !important;
-//     }
-// }
-// .h-btn, .k-button {
-//     @include font-size-sm;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     position: relative;
-//     flex: 0 0 auto;
-//     height: 28px;
-//     padding: 0 20px;
-//     border-radius: 3px;
-//     white-space: nowrap;
-//     transition: background 0.2s ease-in;
 
-//     background-color: $main;
-//     border: 1px solid $main;
-//     color: $white;
-    
-//     &:hover, &:focus {
-//         background-color: $marine-blue;
-//         border: 1px solid $marine-blue;
-//     }
-//     &.k-state-focused {
-//         background-color: $marine-blue;
-//         border: 1px solid $marine-blue;
-//     }
-//     &:disabled,
-//     &:disabled:hover,
-//     &:disabled:focus,
-//     &:disabled:active { //disabled 상태
-//         cursor: default;
-//         background: $gray-f5 !important;
-//         border: 1px solid $gray-c !important;
-//         color: $gray-a !important;
-//         opacity: 0.7;
-//     }
-//     &.text {
-//         background: transparent;
-//         border: 1px solid transparent;
-//         height: auto;
-//         padding: 0; 
-//         text-decoration: underline;
-//     }
-//     .k-icon {
-//         width: 16px;
-//         height: 16px;
-//     }
-//     &:not(.col)> * + * {
-//         // 아이콘 같이 있는 경우
-//         margin-left: 6px;
-//     }
-//     &.k-button-icontext { //아이콘 + 텍스트 버튼
-//         padding: 0 12px;
-//         > * + * {
-//             margin-left: 4px;
-//         }
-//         &.md > * + * { 
-//             margin-left: 8px; 
-//         } 
-//     }
-//     /*
-//     * ------------------------------
-//     * 헤더버튼
-//     * ------------------------------
-//     */
-//     &.logout { //로그아웃
-//         margin-left: 6px;
-//         border: 1px solid $btn-light-border;
-//         &.k-state-active {
 
-//         }
-//         &.k-state-focused {
-//             border: 1px solid $btn-light-border;
-//         }
-//     }
-// }
-// .h-btn, .k-button { //color
-//     &.blue {
-//         background-color: $main;
-//         border: 1px soild $main;
-//         color: $white;
-//         &:hover, &:focus {
-//             background-color: $marine-blue;
-//         }
-//         &.k-state-active {
-
-//         }
-//         &.k-state-focused {
-//             background-color: $marine-blue;
-//         }
-//     }
-//     &.light-blue {
-//         background-color: $lavender;
-//         border: 1px solid $lavender;
-//         color: $main;
-//         &:hover, &:focus {
-//             background-color: $btn-light-blue-hover-bg;
-//         }
-//         &.k-state-active {
-    
-//         }
-//         &.k-state-focused {
-//             background-color: $btn-light-blue-hover-bg;
-//         }
-//     }
-//     &.light-blue-border {
-//         background-color: $tableBG1;
-//         border: 1px solid $gray-c;
-//     }
-//     &.blue-border {
-//         background: $white;
-//         border: 1px solid $main;
-//         color: $main;
-//         &:hover, &:focus {
-//             background-color: $btn-blue-border-hover-bg;
-//         }
-//         &.k-state-active {
-
-//         }
-//         &.k-state-focused {
-//             background-color: $btn-blue-border-hover-bg;
-//         }
-//     }
-//     &.gray-border {
-//         background-color: $white;
-//         border: 1px solid $gray-9;
-//         color: $gray-2;
-//         &:hover, &:focus {
-//             background-color: $gray-e;
-//             border: 1px solid $gray-a;
-//         }
-//         &.k-state-active {
-
-//         }
-//         &.k-state-focused {
-//             background-color: $gray-e;
-//             border: 1px solid $gray-a;
-//         }
-//     }
-//     &.green {
-//         background-color: $green;
-//         border: 1px solid $green-dark;
-//         color: $white;
-//         &:hover, &:focus {
-//             background-color: $green-dark;
-//             border: 1px solid $green-dark;
-//         }
-//         &.k-state-active {
-
-//         }
-//         &.k-state-focused {
-//             background-color: $green-dark;
-//         }
-//     }
-//     &.light-green {
-//         background-color: $green-light;
-//         border: 1px solid $green-light;
-//         color: $green;
-//         &:hover, &:focus {
-//             background-color: $green-light;
-//             border: 1px solid $green-light;
-//             color: $green;
-//         }
-//         &.k-state-active {
-     
-//         }
-//         &.k-state-focused {
-//             background-color: $green-light;
-//             border: 1px solid $green-light;
-//             color: $green;
-//         }
-//     }    
-// }
-
-// /*
-//  * ------------------------------
-//  * 버튼 그룹
-//  * ------------------------------
-//  */
-
-// .btn-box {
-//     display: flex;
-//     justify-content: center;
-//     .k-button {
-//         flex: 0 1 auto;
-//     }
-//     .k-button + .k-button {
-//         margin-left: 6px;
-//     }
-// }
-
-// .k-button-group {
-//     display: flex;
-//     justify-content: center;
-//     &.period {
-//         .k-button {
-//             @include font-size-sm;
-//             flex: 0 1 auto;
-//             min-width: 57px;
-//             background-color: $white;
-//             border:  1px solid $gray-a;
-//             border-right: 0;
-//             color: $gray-7;
-//             border-radius: 0;
-//             &.k-state-active, &.k-state-focused  {
-//                 background-color: $accent;
-//                 border: 1px solid $accent;
-//                 border-right: 0;
-//                 color: $white;
-//                 + .k-button {
-//                     border-left: 1px solid $accent;
-//                 }
-//             }
-//             &:first-child {
-//                 border-radius: 3px 0 0 3px;
-//             }
-//             &:last-child {
-//                 border-radius: 0 3px 3px 0;
-//                 border-right: 1px solid $gray-a;
-//                 &.k-state-active, &.k-state-focused  {
-//                     border-right: 1px solid $accent;
-//                 }
-//             }
-//             + .k-button {
-//                 &.k-state-active {
-//                     margin-left: 0px;
-//                     padding-left: 20px;
-//                 }
-//             }
-//         }
-//     }
-    
-// }
+.h-btn, .k-button {
+    &.text {
+        padding: 0;
+        color: $gray-7; 
+        text-decoration: none;
+    }
+}
+   
