--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -631,6 +631,10 @@ button {
   text-align: left !important;
 }
 
+.text-center {
+  text-align: center !important;
+}
+
 /*
 * ------------------------------
 * Title
@@ -694,14 +698,29 @@ button {
   margin: 12px 0 4px;
 }
 .title-box.md .sub-title {
-  font-size: 16px;
+  font-size: 15px;
   line-height: 26px;
-  letter-spacing: -0.8px;
+  letter-spacing: -0.75px;
   min-height: 30px;
   font-weight: 500;
 }
 .title-box.md .right-group, .title-box.md .btn-box {
   margin-bottom: 6px;
+}
+.title-box.xsm {
+  min-height: 28px;
+  margin: 12px 0 6px;
+  align-items: flex-end;
+}
+.title-box.xsm .sub-title {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+}
+.title-box.xsm .noti {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
 }
 .title-box.sm {
   min-height: 28px;
@@ -1182,7 +1201,17 @@ button {
   box-shadow: 1px 1px 7px 1px rgba(128, 128, 128, 0.3);
 }
 .k-window .content-group {
+  overflow: auto;
+  height: calc(100% - 90px);
   background-color: #f7f7f7;
+  padding: 30px;
+  border-top: 0;
+  border-bottom: 0;
+}
+.k-window .content-group .agree-area {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
 }
 
 .k-window-titlebar {
@@ -1205,7 +1234,6 @@ button {
   position: relative;
   flex: 1 1 auto;
   background: #f7f7f7;
-  overflow: hidden;
   overflow: auto;
 }
 
@@ -1251,19 +1279,6 @@ button {
   background-size: contain;
 }
 
-.content-group {
-  overflow: auto;
-  height: calc(100% - 90px);
-  padding: 30px;
-  border-top: 0;
-  border-bottom: 0;
-}
-.content-group .agree-area {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-
 .window-footer {
   display: block;
   padding: 20px 30px;
@@ -1280,13 +1295,14 @@ button {
   padding: 0;
   background: #fff;
   outline: 0;
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   position: absolute;
   z-index: 10002;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   border: 1px solid #555;
+  overflow: hidden;
 }
 .k-window.k-dialog .k-dialog-titlebar {
   font-size: 14px;
@@ -1306,6 +1322,10 @@ button {
 }
 .k-window.k-dialog .k-dialog-titlebar .k-button {
   padding: 0;
+}
+.k-window.k-dialog .k-dialog-content {
+  height: 100%;
+  height: calc(100% - 50px);
 }
 .k-window.k-dialog .k-button.k-dialog-close {
   width: 18px;
@@ -1329,11 +1349,16 @@ button {
   border: 1px solid transparent;
 }
 .k-window.k-dialog .content-group {
+  height: 100%;
   background: #fff;
-  padding: 30px;
 }
 .k-window.k-dialog .content-group.has-check {
   padding-bottom: 70px;
+}
+.k-window.k-dialog .pop-guide .list {
+  font-size: 12px;
+  line-height: 26px;
+  letter-spacing: -0.6px;
 }
 
 .check-group.bottom {
@@ -1382,6 +1407,18 @@ button {
 
 .btn-box {
   margin-top: 20px;
+}
+
+/*
+* ------------------------------
+* dialog
+* ------------------------------
+*/
+.k-window.k-dialog .content-group {
+  padding: 20px 30px 30px;
+}
+.k-window.k-dialog .btn-box.justify-content-end {
+  margin-top: 10px;
 }
 
 table {
@@ -1443,17 +1480,12 @@ td .form-box, th .form-box {
   line-height: 26px;
   letter-spacing: -0.7px;
   padding: 0 10px;
-  background: #e3ecf9;
-  font-weight: bold;
-  color: #222;
+  white-space: nowrap;
 }
 .table td {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
-  height: 42px;
-  padding: 6px 10px;
-  color: #222;
 }
 
 .table-bottom {
@@ -1481,6 +1513,41 @@ td .form-box, th .form-box {
 }
 .table-box.has-bar .sub-title {
   color: #2476dd;
+}
+
+/*
+* ------------------------------
+* table
+* ------------------------------
+*/
+.table {
+  border-top: 1px solid #222;
+}
+.table th, .table td {
+  color: #555;
+}
+.table tbody th {
+  text-align: center;
+  line-height: 16px;
+}
+.table thead th {
+  height: 40px;
+  padding: 1px 10px;
+  line-height: 18px;
+}
+.table th {
+  background-color: #f2f4f7;
+  font-weight: 500;
+  text-align: center;
+  line-height: 16px;
+}
+.table td {
+  padding: 6px 10px;
+  height: 40px;
+}
+.table tr:first-child th,
+.table tr:first-child td {
+  border-top: 0;
 }
 
 /*
@@ -1620,6 +1687,8 @@ td .form-box, th .form-box {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
+  display: flex;
+  align-items: center;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: auto;
@@ -1866,6 +1935,7 @@ td .form-box, th .form-box {
   white-space: nowrap;
 }
 .h-checkbox.no-label {
+  min-width: 20px;
   width: 20px;
   height: 20px;
   padding-left: 0;
@@ -1934,6 +2004,12 @@ td .form-box, th .form-box {
   height: auto;
   padding: 0;
   text-decoration: underline;
+}
+.h-btn.text.is-checked, .k-button.text.is-checked {
+  color: #0e4194;
+}
+.h-btn.text.is-important, .k-button.text.is-important {
+  color: #f14747;
 }
 .h-btn .k-icon, .k-button .k-icon {
   width: 16px;
@@ -2148,6 +2224,12 @@ td .form-box, th .form-box {
   padding-left: 20px;
 }
 
+.h-btn.text, .k-button.text {
+  padding: 0;
+  color: #777;
+  text-decoration: none;
+}
+
 .h-ico, .k-icon {
   display: inline-flex;
   flex: 0 0 auto;
@@ -2218,6 +2300,24 @@ th .required {
   width: 15px;
   height: 15px;
   background-image: url("../images/icon/icon_time.svg");
+  background-size: contain;
+}
+.h-ico.input-check {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images/icon/icon_check_default.svg");
+  background-size: contain;
+}
+.h-ico.is-checked .input-check {
+  background-image: url("../images/icon/icon_check_blue.svg");
+}
+.h-ico.is-important .input-check {
+  background-image: url("../images/icon/icon_check_active.svg");
+}
+.h-ico.plus {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images/icon/icon_plus.svg");
   background-size: contain;
 }
 .h-ico.mail {
@@ -2336,8 +2436,16 @@ th .required {
   background-image: url("../images/icon/btn_tip_default.svg");
   background-size: contain;
 }
-.h-ico.tip:hover {
+.h-ico.tip.k-state-border-down {
   background-image: url("../images/icon/btn_tip_hover.svg");
+}
+
+.is-checked .k-i-input-check {
+  background-image: url("../images/icon/icon_check_blue.svg");
+}
+
+.is-important .k-i-input-check {
+  background-image: url("../images/icon/icon_check_active.svg");
 }
 
 .k-i-example {
@@ -2366,6 +2474,18 @@ th .required {
   width: 15px;
   height: 15px;
   background-image: url("../images/icon/icon_time.svg");
+  background-size: contain;
+}
+.k-i-input-check {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images/icon/icon_check_default.svg");
+  background-size: contain;
+}
+.k-i-plus {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images/icon/icon_plus.svg");
   background-size: contain;
 }
 .k-i-mail {
@@ -2494,6 +2614,24 @@ th .required {
   background-image: url("../images/icon/btn_tip_hover.svg");
 }
 
+/*
+* ------------------------------
+* dropdown
+* ------------------------------
+*/
+.k-dropdown.sm {
+  max-width: 110px;
+  min-width: 110px;
+}
+.k-dropdown.md {
+  max-width: 140px;
+  min-width: 140px;
+}
+.k-dropdown.lg {
+  max-width: 220px;
+  min-width: 220px;
+}
+
 .k-checkbox-label,
 .k-radio-label {
   position: initial;
@@ -2506,6 +2644,68 @@ th .required {
 
 /*
 * ------------------------------
+* tab
+* ------------------------------
+*/
+.k-tabstrip-wrapper {
+  display: flex;
+}
+.k-tabstrip-wrapper > .k-tabstrip {
+  flex: 1 1 auto;
+}
+.k-tabstrip-wrapper > .k-content {
+  border-color: #dee2e6;
+  color: #212529;
+  background-color: #fff;
+}
+
+.k-tabstrip-content.k-state-active,
+.k-tabstrip > .k-content.k-state-active {
+  display: block;
+}
+
+.k-tabstrip-content,
+.k-tabstrip > .k-content {
+  display: none;
+}
+
+.k-tabstrip-items {
+  height: 27px;
+  border-bottom: 1px solid #ddd;
+  color: #777;
+  display: flex;
+  flex-direction: row;
+  flex: 0 0 auto;
+  position: relative;
+}
+.k-tabstrip-items .k-item {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+  height: 100%;
+  line-height: 21px;
+  margin-right: 20px;
+}
+.k-tabstrip-items .k-link {
+  padding-bottom: 5px;
+  color: inherit;
+  cursor: pointer;
+  display: inline-flex;
+  vertical-align: middle;
+  flex: 1 1 auto;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+}
+.k-tabstrip-items .k-item.k-state-active,
+.k-tabstrip-items .k-item.k-state-selected {
+  border-bottom: 2px solid #0e4194;
+  color: #0e4194;
+  font-weight: bold;
+}
+
+/*
+* ------------------------------
 * tooltip
 * ------------------------------
 */
@@ -2513,7 +2713,7 @@ th .required {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
-  margin: 3px;
+  margin: 10px 0;
   padding: 10px;
   background: #fff;
   border: 1px solid #0e4194;
@@ -2522,6 +2722,16 @@ th .required {
 }
 .k-tooltip .k-tooltip-button {
   display: none;
+}
+.k-tooltip::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 7px;
+  width: 12px;
+  height: 10px;
+  background-image: url("../images/icon/img_tooltip.svg");
 }
 
 /*
@@ -2532,15 +2742,19 @@ th .required {
 .k-datepicker {
   position: relative;
   display: inline-flex;
-  max-width: 120px;
+  width: 100%;
   height: 28px;
   white-space: nowrap;
   vertical-align: middle;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
 }
+.k-datepicker.sm {
+  max-width: 120px;
+}
 .k-datepicker .k-picker-wrap {
   display: flex;
+  width: 100%;
   padding: 0 10px 0 4px;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -2682,6 +2896,60 @@ th .required {
 
 /*
 * ------------------------------
+* listbox
+* ------------------------------
+*/
+.optional-box {
+  display: flex;
+  position: relative;
+  border-top: 1px solid #222;
+}
+
+.k-listbox {
+  display: block;
+  width: 50%;
+  height: 190px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  overflow: auto;
+}
+.k-listbox.k-listbox-toolbar-right {
+  background-color: #fff;
+  border-right: 0;
+}
+
+.k-list {
+  height: auto;
+}
+.k-list .k-item {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
+  width: 100%;
+  padding: 0 10px;
+}
+.k-list .k-item:hover, .k-list .k-item.k-state-focused, .k-list .k-item.k-state-selected {
+  background-color: #efefef;
+}
+
+.k-listbox-toolbar {
+  position: absolute;
+  top: 0;
+}
+.k-listbox-toolbar .k-button {
+  background: #fff;
+  color: #222;
+}
+.k-listbox-toolbar .k-button .k-i-arrow-60-right {
+  content: "ddd";
+}
+.k-list-scroller {
+  width: 100%;
+}
+
+/*
+* ------------------------------
 * dropdown
 * ------------------------------
 */
@@ -2689,7 +2957,6 @@ th .required {
   width: 100%;
   white-space: nowrap;
   display: inline-flex;
-  min-width: 110px !important;
   height: 28px;
 }
 .k-dropdown .k-dropdown-wrap {
@@ -2825,7 +3092,6 @@ th .required {
 */
 .k-grid {
   border: none;
-  border-top: 1px solid #222;
   border-bottom: 1px solid #aaa;
 }
 .k-grid thead th {
@@ -2855,6 +3121,10 @@ th .required {
 }
 .k-grid tr:hover td {
   background-color: #eff2f7;
+}
+
+.k-grid-header {
+  border-top: 1px solid #222;
 }
 
 .k-grid .k-grouping-header,
