--- a/resources/css/index_bc.css
+++ b/resources/css/index_bc.css
@@ -389,16 +389,16 @@ template {
 * Text style
 */
 /*
-* ------------------------------
-* font size
-* ------------------------------
-*/
-/*
 * Regular font size
 */
 /*
 * Text style
 */
+/*
+* ------------------------------
+* font size
+* ------------------------------
+*/
 /* px 단위를 rem 으로 교체한다.
 * @access public
 * @param {String} $pixels - 픽셀 고정값
@@ -485,6 +485,46 @@ template {
   * Example of useage:
   * @include background-opacity(#000, 0.3);
   */
+/*
+* ------------------------------
+* Title
+* ------------------------------
+*/
+/*
+* ------------------------------
+* Title Group
+* ------------------------------
+*/
+/*
+* ------------------------------
+*  숫자 카운트
+* ------------------------------
+*/
+/*
+* ------------------------------
+* BreadCrumb
+* ------------------------------
+*/
+/*
+* ------------------------------
+* List 
+* ------------------------------
+*/
+/*
+* ------------------------------
+* badge
+* ------------------------------
+*/
+/*
+* ------------------------------
+* File upload
+* ------------------------------
+*/
+/*
+* ------------------------------
+* File upload BP type
+* ------------------------------
+*/
 * {
   box-sizing: border-box;
 }
@@ -626,6 +666,10 @@ button {
   text-align: left !important;
 }
 
+.text-center {
+  text-align: center !important;
+}
+
 /*
 * ------------------------------
 * Title
@@ -689,14 +733,29 @@ button {
   margin: 12px 0 4px;
 }
 .title-box.md .sub-title {
-  font-size: 16px;
+  font-size: 15px;
   line-height: 26px;
-  letter-spacing: -0.8px;
+  letter-spacing: -0.75px;
   min-height: 30px;
   font-weight: 500;
 }
 .title-box.md .right-group, .title-box.md .btn-box {
   margin-bottom: 6px;
+}
+.title-box.xsm {
+  min-height: 28px;
+  margin: 12px 0 6px;
+  align-items: flex-end;
+}
+.title-box.xsm .sub-title {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+}
+.title-box.xsm .noti {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
 }
 .title-box.sm {
   min-height: 28px;
@@ -845,46 +904,6 @@ button {
   color: #aaa;
 }
 
-/*
-* ------------------------------
-* File upload BP type
-* ------------------------------
-*/
-/*
-* ------------------------------
-* Title
-* ------------------------------
-*/
-/*
-* ------------------------------
-* Title Group
-* ------------------------------
-*/
-/*
-* ------------------------------
-*  숫자 카운트
-* ------------------------------
-*/
-/*
-* ------------------------------
-* BreadCrumb
-* ------------------------------
-*/
-/*
-* ------------------------------
-* List 
-* ------------------------------
-*/
-/*
-* ------------------------------
-* badge
-* ------------------------------
-*/
-/*
-* ------------------------------
-* File upload
-* ------------------------------
-*/
 /*
 * ------------------------------
 * File upload BP type
@@ -1217,7 +1236,17 @@ button {
   box-shadow: 1px 1px 7px 1px rgba(128, 128, 128, 0.3);
 }
 .k-window .content-group {
+  overflow: auto;
+  height: calc(100% - 90px);
   background-color: #f7f7f7;
+  padding: 30px;
+  border-top: 0;
+  border-bottom: 0;
+}
+.k-window .content-group .agree-area {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
 }
 
 .k-window-titlebar {
@@ -1240,7 +1269,6 @@ button {
   position: relative;
   flex: 1 1 auto;
   background: #f7f7f7;
-  overflow: hidden;
   overflow: auto;
 }
 
@@ -1286,19 +1314,6 @@ button {
   background-size: contain;
 }
 
-.content-group {
-  overflow: auto;
-  height: calc(100% - 90px);
-  padding: 30px;
-  border-top: 0;
-  border-bottom: 0;
-}
-.content-group .agree-area {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-
 .window-footer {
   display: block;
   padding: 20px 30px;
@@ -1315,13 +1330,14 @@ button {
   padding: 0;
   background: #fff;
   outline: 0;
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   position: absolute;
   z-index: 10002;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   border: 1px solid #555;
+  overflow: hidden;
 }
 .k-window.k-dialog .k-dialog-titlebar {
   font-size: 14px;
@@ -1341,6 +1357,10 @@ button {
 }
 .k-window.k-dialog .k-dialog-titlebar .k-button {
   padding: 0;
+}
+.k-window.k-dialog .k-dialog-content {
+  height: 100%;
+  height: calc(100% - 50px);
 }
 .k-window.k-dialog .k-button.k-dialog-close {
   width: 18px;
@@ -1364,11 +1384,16 @@ button {
   border: 1px solid transparent;
 }
 .k-window.k-dialog .content-group {
+  height: 100%;
   background: #fff;
-  padding: 30px;
 }
 .k-window.k-dialog .content-group.has-check {
   padding-bottom: 70px;
+}
+.k-window.k-dialog .pop-guide .list {
+  font-size: 12px;
+  line-height: 26px;
+  letter-spacing: -0.6px;
 }
 
 .check-group.bottom {
@@ -1424,10 +1449,10 @@ button {
 * window
 * ------------------------------
 */
-.bc .select-industry-box {
+.select-industry-box {
   display: flex;
 }
-.bc .select-industry-box .right-group {
+.select-industry-box .right-group {
   margin-left: 10px;
   background: #f7f7f7;
   border: 1px solid #eee;
@@ -1438,12 +1463,23 @@ button {
 * dialog
 * ------------------------------
 */
-.bc .k-dialog-titlebar {
+/*
+* ------------------------------
+* dialog
+* ------------------------------
+*/
+.k-window.k-dialog .k-dialog-titlebar {
   font-size: 15px;
   line-height: 24px;
   letter-spacing: -0.75px;
 }
-.bc .pop-guide .list {
+.k-window.k-dialog .content-group {
+  padding: 30px;
+}
+.k-window.k-dialog .btn-box.justify-content-end {
+  margin-top: 10px;
+}
+.k-window.k-dialog .pop-guide .list {
   font-size: 12px;
   line-height: 20px;
   letter-spacing: -0.6px;
@@ -1540,17 +1576,12 @@ td .form-box, th .form-box {
   line-height: 26px;
   letter-spacing: -0.7px;
   padding: 0 10px;
-  background: #e3ecf9;
-  font-weight: bold;
-  color: #222;
+  white-space: nowrap;
 }
 .table td {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
-  height: 42px;
-  padding: 6px 10px;
-  color: #222;
 }
 
 .table-bottom {
@@ -1619,7 +1650,7 @@ td .form-box, th .form-box {
 * 
 * ------------------------------
 */
-.bc .table th {
+.table th {
   font-size: 13px;
   line-height: 24px;
   letter-spacing: -0.65px;
@@ -1629,10 +1660,11 @@ td .form-box, th .form-box {
   font-weight: 500;
   text-align: center;
 }
-.bc .table td {
+.table td {
   font-size: 13px;
   line-height: 24px;
   letter-spacing: -0.65px;
+  padding: 6px 10px;
   height: 38px;
 }
 
@@ -1789,6 +1821,8 @@ td .form-box, th .form-box {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
+  display: flex;
+  align-items: center;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: auto;
@@ -2105,6 +2139,7 @@ td .form-box, th .form-box {
   white-space: nowrap;
 }
 .h-checkbox.no-label {
+  min-width: 20px;
   width: 20px;
   height: 20px;
   padding-left: 0;
@@ -2212,6 +2247,12 @@ td .form-box, th .form-box {
   height: auto;
   padding: 0;
   text-decoration: underline;
+}
+.h-btn.text.is-checked, .k-button.text.is-checked {
+  color: #0e4194;
+}
+.h-btn.text.is-important, .k-button.text.is-important {
+  color: #f14747;
 }
 .h-btn .k-icon, .k-button .k-icon {
   width: 16px;
@@ -2653,6 +2694,24 @@ th .required {
   background-image: url("../images_bc/icon/icon_time.svg");
   background-size: contain;
 }
+.h-ico.input-check {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images_bc/icon/icon_check_default.svg");
+  background-size: contain;
+}
+.h-ico.is-checked .input-check {
+  background-image: url("../images_bc/icon/icon_check_blue.svg");
+}
+.h-ico.is-important .input-check {
+  background-image: url("../images_bc/icon/icon_check_active.svg");
+}
+.h-ico.plus {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images_bc/icon/icon_plus.svg");
+  background-size: contain;
+}
 .h-ico.mail {
   width: 16px;
   height: 16px;
@@ -2769,8 +2828,16 @@ th .required {
   background-image: url("../images_bc/icon/btn_tip_default.svg");
   background-size: contain;
 }
-.h-ico.tip:hover {
+.h-ico.tip.k-state-border-down {
   background-image: url("../images_bc/icon/btn_tip_hover.svg");
+}
+
+.is-checked .k-i-input-check {
+  background-image: url("../images_bc/icon/icon_check_blue.svg");
+}
+
+.is-important .k-i-input-check {
+  background-image: url("../images_bc/icon/icon_check_active.svg");
 }
 
 .k-i-example {
@@ -2799,6 +2866,18 @@ th .required {
   width: 15px;
   height: 15px;
   background-image: url("../images_bc/icon/icon_time.svg");
+  background-size: contain;
+}
+.k-i-input-check {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images_bc/icon/icon_check_default.svg");
+  background-size: contain;
+}
+.k-i-plus {
+  width: 15px;
+  height: 15px;
+  background-image: url("../images_bc/icon/icon_plus.svg");
   background-size: contain;
 }
 .k-i-mail {
@@ -2934,6 +3013,113 @@ th .required {
   background-size: contain;
 }
 
+/*
+* ------------------------------
+* dropdown
+* ------------------------------
+*/
+.k-dropdown {
+  min-width: 110px !important;
+  height: 28px;
+}
+.k-dropdown .k-dropdown-wrap.k-state-disabled, .k-dropdown .k-dropdown-wrap.k-state-disabled:hover {
+  background-color: #f5f5f5;
+  color: #aaa;
+}
+.k-dropdown .k-dropdown-wrap.k-state-disabled .k-i-arrow-60-down:before, .k-dropdown .k-dropdown-wrap.k-state-disabled:hover .k-i-arrow-60-down:before {
+  background-image: url("../images_bc/icon/icon_arrow_down_diabled.svg");
+}
+.k-dropdown .k-dropdown-wrap.k-state-hover, .k-dropdown .k-dropdown-wrap:hover {
+  background-color: #fff;
+}
+.k-dropdown .k-dropdown-wrap.k-state-focused {
+  border: 1px solid #222;
+  color: #222;
+}
+.k-dropdown .k-dropdown-wrap .k-input {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+  text-indent: 10px;
+}
+
+/*
+* ------------------------------
+* 인풋 (date range)
+* ------------------------------
+*/
+.k-dateinput .k-textbox {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+
+/*
+* ------------------------------
+* Grid
+* ------------------------------
+*/
+.k-grid .k-grouping-header th.k-header,
+.k-grid-header th.k-header {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+
+.k-grid td {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+
+/*
+* ------------------------------
+* breadcrumb
+* ------------------------------
+*/
+.k-breadcrumb .k-breadcrumb-item {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+
+/*
+* ------------------------------
+* editor
+* ------------------------------
+*/
+.send-form-set .label {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+
+/*
+* ------------------------------
+* textarea
+* ------------------------------
+*/
+.k-textarea {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+.k-textarea ::-moz-placeholder {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+.k-textarea :-ms-input-placeholder {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+.k-textarea ::placeholder {
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: -0.75px;
+}
+
 .k-checkbox-label,
 .k-radio-label {
   position: initial;
@@ -2946,6 +3132,68 @@ th .required {
 
 /*
 * ------------------------------
+* tab
+* ------------------------------
+*/
+.k-tabstrip-wrapper {
+  display: flex;
+}
+.k-tabstrip-wrapper > .k-tabstrip {
+  flex: 1 1 auto;
+}
+.k-tabstrip-wrapper > .k-content {
+  border-color: #dee2e6;
+  color: #212529;
+  background-color: #fff;
+}
+
+.k-tabstrip-content.k-state-active,
+.k-tabstrip > .k-content.k-state-active {
+  display: block;
+}
+
+.k-tabstrip-content,
+.k-tabstrip > .k-content {
+  display: none;
+}
+
+.k-tabstrip-items {
+  height: 27px;
+  border-bottom: 1px solid #ddd;
+  color: #777;
+  display: flex;
+  flex-direction: row;
+  flex: 0 0 auto;
+  position: relative;
+}
+.k-tabstrip-items .k-item {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+  height: 100%;
+  line-height: 21px;
+  margin-right: 20px;
+}
+.k-tabstrip-items .k-link {
+  padding-bottom: 5px;
+  color: inherit;
+  cursor: pointer;
+  display: inline-flex;
+  vertical-align: middle;
+  flex: 1 1 auto;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+}
+.k-tabstrip-items .k-item.k-state-active,
+.k-tabstrip-items .k-item.k-state-selected {
+  border-bottom: 2px solid #0e4194;
+  color: #0e4194;
+  font-weight: bold;
+}
+
+/*
+* ------------------------------
 * tooltip
 * ------------------------------
 */
@@ -2953,7 +3201,7 @@ th .required {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
-  margin: 3px;
+  margin: 10px 0;
   padding: 10px;
   background: #fff;
   border: 1px solid #0e4194;
@@ -2962,6 +3210,16 @@ th .required {
 }
 .k-tooltip .k-tooltip-button {
   display: none;
+}
+.k-tooltip::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 7px;
+  width: 12px;
+  height: 10px;
+  background-image: url("../images_bc/icon/img_tooltip.svg");
 }
 
 /*
@@ -2972,15 +3230,19 @@ th .required {
 .k-datepicker {
   position: relative;
   display: inline-flex;
-  max-width: 120px;
+  width: 100%;
   height: 28px;
   white-space: nowrap;
   vertical-align: middle;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
 }
+.k-datepicker.sm {
+  max-width: 120px;
+}
 .k-datepicker .k-picker-wrap {
   display: flex;
+  width: 100%;
   padding: 0 10px 0 4px;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -3122,6 +3384,60 @@ th .required {
 
 /*
 * ------------------------------
+* listbox
+* ------------------------------
+*/
+.optional-box {
+  display: flex;
+  position: relative;
+  border-top: 1px solid #222;
+}
+
+.k-listbox {
+  display: block;
+  width: 50%;
+  height: 190px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  overflow: auto;
+}
+.k-listbox.k-listbox-toolbar-right {
+  background-color: #fff;
+  border-right: 0;
+}
+
+.k-list {
+  height: auto;
+}
+.k-list .k-item {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
+  width: 100%;
+  padding: 0 10px;
+}
+.k-list .k-item:hover, .k-list .k-item.k-state-focused, .k-list .k-item.k-state-selected {
+  background-color: #efefef;
+}
+
+.k-listbox-toolbar {
+  position: absolute;
+  top: 0;
+}
+.k-listbox-toolbar .k-button {
+  background: #fff;
+  color: #222;
+}
+.k-listbox-toolbar .k-button .k-i-arrow-60-right {
+  content: "ddd";
+}
+.k-list-scroller {
+  width: 100%;
+}
+
+/*
+* ------------------------------
 * dropdown
 * ------------------------------
 */
@@ -3129,7 +3445,6 @@ th .required {
   width: 100%;
   white-space: nowrap;
   display: inline-flex;
-  min-width: 110px !important;
   height: 28px;
 }
 .k-dropdown .k-dropdown-wrap {
@@ -3265,7 +3580,6 @@ th .required {
 */
 .k-grid {
   border: none;
-  border-top: 1px solid #222;
   border-bottom: 1px solid #aaa;
 }
 .k-grid thead th {
@@ -3295,6 +3609,10 @@ th .required {
 }
 .k-grid tr:hover td {
   background-color: #eff2f7;
+}
+
+.k-grid-header {
+  border-top: 1px solid #222;
 }
 
 .k-grid .k-grouping-header,
@@ -7626,109 +7944,23 @@ th .required {
 
 /*
 * ------------------------------
-* dropdown
+* Wrap
 * ------------------------------
 */
-.k-dropdown {
-  min-width: 110px !important;
-  height: 28px;
-}
-.k-dropdown .k-dropdown-wrap.k-state-disabled, .k-dropdown .k-dropdown-wrap.k-state-disabled:hover {
-  background-color: #f5f5f5;
-  color: #aaa;
-}
-.k-dropdown .k-dropdown-wrap.k-state-disabled .k-i-arrow-60-down:before, .k-dropdown .k-dropdown-wrap.k-state-disabled:hover .k-i-arrow-60-down:before {
-  background-image: url("../images_bc/icon/icon_arrow_down_diabled.svg");
-}
-.k-dropdown .k-dropdown-wrap.k-state-hover, .k-dropdown .k-dropdown-wrap:hover {
-  background-color: #fff;
-}
-.k-dropdown .k-dropdown-wrap.k-state-focused {
-  border: 1px solid #222;
-  color: #222;
-}
-.k-dropdown .k-dropdown-wrap .k-input {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-  text-indent: 10px;
-}
-
 /*
 * ------------------------------
-* 인풋 (date range)
+* Container
 * ------------------------------
 */
-.k-dateinput .k-textbox {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-
 /*
 * ------------------------------
-* Grid
+* Header
 * ------------------------------
 */
-.k-grid .k-grouping-header th.k-header,
-.k-grid-header th.k-header {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-
-.k-grid td {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-
-/*
-* ------------------------------
-* breadcrumb
-* ------------------------------
-*/
-.k-breadcrumb .k-breadcrumb-item {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-
-/*
-* ------------------------------
-* editor
-* ------------------------------
-*/
-.send-form-set .label {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-
-/*
-* ------------------------------
-* textarea
-* ------------------------------
-*/
-.k-textarea {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-.k-textarea ::-moz-placeholder {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-.k-textarea :-ms-input-placeholder {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
-}
-.k-textarea ::placeholder {
-  font-size: 15px;
-  line-height: 24px;
-  letter-spacing: -0.75px;
+.bc .header-wrap {
+  height: 56px;
+  padding: 0 28px;
+  background: #3b6ac5;
 }
 
 /*
@@ -8217,25 +8449,4 @@ th .required {
   width: 100%;
   height: 36px;
   margin-top: 10px;
-}
-
-/*
-* ------------------------------
-* Wrap
-* ------------------------------
-*/
-/*
-* ------------------------------
-* Container
-* ------------------------------
-*/
-/*
-* ------------------------------
-* Header
-* ------------------------------
-*/
-.bc .header-wrap {
-  height: 56px;
-  padding: 0 28px;
-  background: #3b6ac5;
 }
