--- a/resources/css/scss/_colors.scss
+++ b/resources/css/scss/_colors.scss
@@ -22,6 +22,7 @@ $gray-a: #aaa;
 $gray-c: #ccc;
 $gray-e: #eee;
 $gray-e4: #e4e4e4;
+$gray-ef: #efefef;
 $gray-f5: #f5f5f5;
 
 
@@ -47,6 +48,10 @@ $green-dark: #0d5a30;
 
 // Background
 $bg: #f5f5f5;
+
+// Background
+$table-th: #f2f4f7;
+
 
 // State
 $state: #ffe282;
