--- a/resources/css/scss/_global.scss
+++ b/resources/css/scss/_global.scss
@@ -129,6 +129,7 @@ button {
 .mb-0 { margin-bottom: 0px !important; }
 .ml-20 { margin-left: 20px !important; }
 .text-left { text-align: left !important; }
+.text-center { text-align: center !important; }
 /*
 * ------------------------------
 * Title
@@ -185,13 +186,23 @@ button {
 		min-height: 28px;
 		margin: 12px 0 4px;
         .sub-title {
-            @include font-size-md;
+            @include font-size-menu;
             min-height: 30px;
-            // margin-bottom: 6px;
             font-weight: 500;
         }
         .right-group, .btn-box {
             margin-bottom: 6px;
+        }
+	}
+	&.xsm { //팝업일 경우
+		min-height: 28px;
+		margin: 12px 0 6px;
+		align-items: flex-end;
+        .sub-title {
+            @include font-size-menu;
+        }
+        .noti {
+            @include font-size-sm;
         }
 	}
 	&.sm {
@@ -199,12 +210,9 @@ button {
 		margin: 12px 0 8px;
         .sub-title {
             @include font-size-sm;
-            // line-height: 18px;
-            // font-weight: bold; 
         }
         .noti {
             @include font-size-sm;
-            // line-height: 18px;
         }
 	}
     .noti {
