--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -8,12 +8,72 @@
 }
 /*
 * ------------------------------
+* tab
+* ------------------------------
+*/
+.k-tabstrip-wrapper {
+	display: flex;
+	>.k-tabstrip {
+		flex: 1 1 auto;
+	}
+	>.k-content {
+		border-color: #dee2e6;
+		color: #212529;
+		background-color: #fff;
+	}
+}
+.k-tabstrip-content.k-state-active, 
+.k-tabstrip>.k-content.k-state-active {
+	display: block;
+}
+.k-tabstrip-content, 
+.k-tabstrip>.k-content {
+	display: none;
+}
+.k-tabstrip {
+	
+}
+.k-tabstrip-items {
+	height: 27px;
+	border-bottom: 1px solid $gray-d;
+	color: $gray-7;
+	display: flex;
+	flex-direction: row;
+	flex: 0 0 auto;
+	position: relative;
+	.k-item {
+		@include font-size-menu;
+		height: 100%;
+		line-height: 21px;
+		margin-right: 20px;
+	}
+	.k-link {
+		padding-bottom: 5px;
+		color: inherit;
+		cursor: pointer;
+		display: inline-flex;
+		vertical-align: middle;
+		flex: 1 1 auto;
+		flex-direction: row;
+		align-content: center;
+		align-items: center;
+	}
+	.k-item.k-state-active, 
+	.k-item.k-state-selected {
+		border-bottom: 2px solid $main;
+		color: $main;
+		font-weight: bold;
+	}
+}
+
+/*
+* ------------------------------
 * tooltip
 * ------------------------------
 */
 .k-tooltip {
 	@include font-size-sm;
-	margin: 3px;
+	margin: 10px 0;
 	padding: 10px;
 	background: $white;
 	border: 1px solid $main;
@@ -21,6 +81,16 @@
 	color: $main;
 	.k-tooltip-button {
 		display: none;
+	}
+	&::before {
+		display: block;
+		content: '';
+		position: absolute;
+		top: -10px;
+		left: 7px;
+		width: 12px; 
+		height: 10px;
+		background-image: url($imgPathIcon+'/img_tooltip.svg');
 	}
 }
 /*
@@ -31,15 +101,19 @@
 .k-datepicker {
     position: relative;
     display: inline-flex;
-	max-width: 120px;
+	width: 100%;
 	height: 28px;
 
     white-space: nowrap;
     vertical-align: middle;
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: transparent;
+	&.sm {
+		max-width: 120px;
+	}
 	.k-picker-wrap {
 		display: flex;
+		width: 100%;
 		padding: 0 10px 0 4px;
 		border: 1px solid $gray-c;
 		border-radius: 3px;
@@ -192,6 +266,82 @@
 
 /*
 * ------------------------------
+* listbox
+* ------------------------------
+*/
+.optional-box {	
+	display: flex;
+	position: relative;
+	border-top: 1px solid $gray-2;
+}
+.k-listbox {
+	display: block;
+	width: 50%;
+	height: 190px;
+	padding: 10px;
+	background-color: $gray-f5;
+	border: 1px solid $gray-c;
+	overflow: auto;
+	.k-list-scroller { //우측 이동박스
+
+	}
+	&.k-listbox-toolbar-right {
+		background-color: $white;
+		border-right: 0;
+	}
+}
+.k-list {
+	height: auto;
+	.k-item {
+		@include font-size-sm;
+		width: 100%;
+		padding: 0 10px;
+		&:hover,
+		&.k-state-focused,
+		&.k-state-selected {
+			background-color: $gray-ef;
+		}
+	}
+}
+.k-list .k-item, 
+.k-list-optionlabel { //리스트
+
+}
+.k-listbox-toolbar { //toolbar
+	position: absolute;
+	top: 0;
+	// display: none;
+	.k-button {
+		background: $white;
+		color: $gray-2;
+		.k-i-arrow-60-right {
+			content: 'ddd'
+		}
+		.k-i-arrow-60-left {
+
+		}
+		.k-i-arrow-double-60-right {
+
+		}
+		.k-i-arrow-double-60-left {
+
+		}
+		.k-i-x {
+
+		}
+	}
+}
+
+.k-listbox:first-of-type {
+
+}
+.k-list-scroller {
+	width: 100%;
+	
+}
+
+/*
+* ------------------------------
 * dropdown
 * ------------------------------
 */
@@ -199,7 +349,7 @@
 	width: 100%;
 	white-space: nowrap;
 	display: inline-flex;
-	min-width: 110px !important;
+	// min-width: 110px !important;
 	height: 28px;
 	&.sm {
 	}
@@ -343,7 +493,7 @@
 //껍데기
 .k-grid {
 	border: none;
-	border-top: 1px solid $gray-2;
+	
 	border-bottom: 1px solid $gray-a;
 	thead th {
 		text-align: center;
@@ -377,6 +527,9 @@
 	}
 }
 
+.k-grid-header {
+	border-top: 1px solid $gray-2;
+}
 //thead
 .k-grid .k-grouping-header,
 .k-grid-header {
