--- a/resources/css/scss/modules/_checkbox.scss
+++ b/resources/css/scss/modules/_checkbox.scss
@@ -93,6 +93,7 @@
     padding-left: 20px + 8px;
     white-space: nowrap;
     &.no-label {
+        min-width: 20px;
         width: 20px;
         height: 20px;
         padding-left: 0;
