--- a/resources/css/scss/modules/_input.scss
+++ b/resources/css/scss/modules/_input.scss
@@ -6,6 +6,8 @@
 
 .h-input, .k-input { //상태
 	@include font-size-sm;
+	display: flex;
+	align-items: center;
 	flex-grow: 1;
 	flex-shrink: 1;
 	flex-basis: auto;
