--- a/resources/css/scss/modules/_popup_b.scss
+++ b/resources/css/scss/modules/_popup_b.scss
@@ -1,33 +1,13 @@
-// /*
-//  * ------------------------------
-//  * 팝업
-//  * ------------------------------
-//  */
- 
-//  .layer-wrap {
-//     position: fixed;
-//     top: 0;
-//     left: 0; 
-//     right: 0;
-//     bottom: 0;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     flex-direction: column;
-// }
-// .k-window {
-//     border-radius: 3px;
-//     padding: 0;
-//     // border-bottom: 1px solid $gray-c;
-//     background: $white;
-//     outline: 0;
-//     display: -ms-inline-flexbox;
-//     display: inline-flex;
-//     -ms-flex-direction: column;
-//     flex-direction: column;
-//     position: absolute;
-//     z-index: 10002;
-//     -webkit-touch-callout: none;
-//     -webkit-tap-highlight-color: transparent;
-// }
-   
+/*
+* ------------------------------
+* dialog
+* ------------------------------
+*/
+.k-window.k-dialog {
+    .content-group {
+        padding: 20px 30px 30px;
+    }
+    .btn-box.justify-content-end {
+        margin-top: 10px;
+    }
+}
