--- a/resources/css/scss/modules/_table.scss
+++ b/resources/css/scss/modules/_table.scss
@@ -8,7 +8,7 @@ table {
 }
 
 .table-group + .table-group {
-    margin-top :30px;
+    margin-top: 30px;
 }
 .table-set {
     margin-top: 12px;
@@ -61,15 +61,10 @@ td .form-box, th .form-box {
     th {
         @include font-size-sm;
         padding: 0 10px;
-        background: $bp-light-blue-hover;
-        font-weight: bold;
-        color: $gray-2;
+        white-space: nowrap;
     }
     td {
         @include font-size-sm;
-        height: 42px;
-        padding: 6px 10px;
-        color: $gray-2;
     }
     
 }
