--- a/resources/css/scss/modules/_table_bc.scss
+++ b/resources/css/scss/modules/_table_bc.scss
@@ -38,20 +38,19 @@ td .form-box, th .form-box {
 * ------------------------------
 */
 
-.bc {
-    .table {  
-        th {
-            @include bc-font-size-xsm;
-            padding: 0 7px;
-            background: $bc-table-th-bg;
-            color: $bc-table-th;
-            font-weight: 500;
-            text-align: center;
-        }
-        td {
-            @include bc-font-size-xsm;
-            height: 38px;
-        }
+.table {  
+    th {
+        @include bc-font-size-xsm;
+        padding: 0 7px;
+        background: $bc-table-th-bg;
+        color: $bc-table-th;
+        font-weight: 500;
+        text-align: center;
+    }
+    td {
+        @include bc-font-size-xsm;
+        padding: 6px 10px;
+        height: 38px;
     }
 }
 
