--- a/resources/css/scss/modules/_table_bp.scss
+++ b/resources/css/scss/modules/_table_bp.scss
@@ -5,14 +5,19 @@
 * ------------------------------
 */
 
-
 .table {
-
+    th, td {
+        color: $gray-2;
+    }
     th {
         @include bp-font-size-sm;
+        font-weight: bold;
+        background: $bp-light-blue-hover;
     }
     td {
         @include bp-font-size-sm;
+        height: 42px;
+        padding: 6px 10px;
     }
 }
 
