--- a/resources/css/scss/modules/_checkbox.scss
+++ b/resources/css/scss/modules/_checkbox.scss
@@ -5,6 +5,9 @@
 */
 .h-checkbox {
     display: block;
+    display: flex;
+    align-items: center;
+    height: 20px;
 }
 .h-checkbox input[type="checkbox"],
 .h-checkbox input[type="radio"] {
@@ -97,8 +100,8 @@
         width: 20px;
         height: 20px;
         padding-left: 0;
-        // margin-left: auto;
-        // margin-right: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
     input[type="radio"] + label::before,
     input[type="checkbox"] + label::before {
